--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello World, we are software developers!</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>Hello World, we are software developers!</h1>
+    <div id="main">
+        <h1 id="title">Dr. Martin Luther King</h1>
+        <h6>The man who saves a billion lifes</h6>
+        <div id="img-div">
+            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSK0aORPekz1KDld5bxfc920x7SQVKKXabGyDVMOz78X4XotdkW
+            "id="image"alt="Dr. Matin Luther King">
+            <figcaption id="img-caption">
+                Dr. Matin Luther King, third from the left, trains biologists in Mexico on
+      how to increase wheat yields - part of his life-long war on hunger.
+            </figcaption>
+        </div>
+        <section id="tribute-info">
+
+        </section>
+    </div>
+
 </body>
 
 </html>
