--- a/index.html
+++ b/index.html
@@ -11,18 +11,59 @@
 
 <body>
     <div id="main">
-        <h1 id="title">Dr. Martin Luther King</h1>
-        <h6>The man who saves a billion lifes</h6>
+        <section id="heading">
+            <h1 id="title">Dr. Martin Luther King</h1>
+            <h6>The man who saves a billion lifes</h6>
+        </section>
         <div id="img-div">
             <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSK0aORPekz1KDld5bxfc920x7SQVKKXabGyDVMOz78X4XotdkW
-            "id="image"alt="Dr. Matin Luther King">
+            " id="image" alt="Dr. Matin Luther King">
             <figcaption id="img-caption">
                 Dr. Matin Luther King, third from the left, trains biologists in Mexico on
-      how to increase wheat yields - part of his life-long war on hunger.
+                how to increase wheat yields - part of his life-long war on hunger.
             </figcaption>
         </div>
         <section id="tribute-info">
+            <h3>Dr Martin Luther King</h3>
+            <ul>
+                <li>(born Michael King Jr.; January 15, 1929 - April 4, 1968) was an American Baptist minister and
+                    activist who became the most visible spokesman and leader in the civil rights movement from 1955
+                    until his assassination in 1968. An African American church leader and the son of early civil rights
+                    activist and minister Martin Luther King Sr., King advanced civil rights for people of color in the
+                    United States through nonviolence and civil disobedience. Inspired by his Christian beliefs and the
+                    nonviolent activism of Mahatma Gandhi, he led targeted, nonviolent resistance against Jim Crow laws
+                    and other forms of discrimination.</li>
 
+                <li>King participated in and led marches for the right to vote, desegregation, labor rights, and other
+                    civil rights.[1] He oversaw the 1955 Montgomery bus boycott and later became the first president of
+                    the Southern Christian Leadership Conference (SCLC). As president of the SCLC, he led the
+                    unsuccessful Albany Movement in Albany, Georgia, and helped organize some of the nonviolent 1963
+                    protests in Birmingham, Alabama. King was one of the leaders of the 1963 March on Washington, where
+                    he delivered his "I Have a Dream" speech on the steps of the Lincoln Memorial. The civil rights
+                    movement achieved pivotal legislative gains in the Civil Rights Act of 1964, Voting Rights Act of
+                    1965, and the Fair Housing Act of 1968.</li>
+
+                <li>King participated in and led marches for the right to vote, desegregation, labor rights, and other
+                    civil rights.[1] He oversaw the 1955 Montgomery bus boycott and later became the first president of
+                    the Southern Christian Leadership Conference (SCLC). As president of the SCLC, he led the
+                    unsuccessful Albany Movement in Albany, Georgia, and helped organize some of the nonviolent 1963
+                    protests in Birmingham, Alabama. King was one of the leaders of the 1963 March on Washington, where
+                    he delivered his "I Have a Dream" speech on the steps of the Lincoln Memorial. The civil rights
+                    movement achieved pivotal legislative gains in the Civil Rights Act of 1964, Voting Rights Act of
+                    1965, and the Fair Housing Act of 1968.</li>
+
+                <li>King participated in and led marches for the right to vote, desegregation, labor rights, and other
+                    civil rights.[1] He oversaw the 1955 Montgomery bus boycott and later became the first president of
+                    the Southern Christian Leadership Conference (SCLC). As president of the SCLC, he led the
+                    unsuccessful Albany Movement in Albany, Georgia, and helped organize some of the nonviolent 1963
+                    protests in Birmingham, Alabama. King was one of the leaders of the 1963 March on Washington, where
+                    he delivered his "I Have a Dream" speech on the steps of the Lincoln Memorial. The civil rights
+                    movement achieved pivotal legislative gains in the Civil Rights Act of 1964, Voting Rights Act of
+                    1965, and the Fair Housing Act of 1968.</li>
+            </ul>
+
+            <a href="https://en.wikipedia.org/wiki/Martin_Luther_King_Jr." id="tribute-link" target="_blank">Tribute
+                Link</a>
         </section>
     </div>
 
