changed the h6 element to p

--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 
 <body>
     <div id="main">
+
         <section id="heading">
             <h1 id="title">Dr. Martin Luther King</h1>
-            <h6>The man who saves a billion lifes</h6>
+            <p>The man who saves a billion lifes</p>
         </section>
+
         <div id="img-div">
             <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSK0aORPekz1KDld5bxfc920x7SQVKKXabGyDVMOz78X4XotdkW
-            " id="image" alt="Dr. Matin Luther King">
+            " id="image" alt="Dr. Martin Luther King">
             <figcaption id="img-caption">
                 Dr. Matin Luther King, third from the left, trains biologists in Mexico on
                 how to increase wheat yields - part of his life-long war on hunger.
             </figcaption>
         </div>
+
         <section id="tribute-info">
             <h3>Dr Martin Luther King</h3>
             <ul>
