added media queries to accomodate larger screens and gave the containers max width. we styled the list items, link and image and its container

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <section id="heading">
             <h1 id="title">Dr. Martin Luther King</h1>
-            <p>The man who saves a billion lifes</p>
+            <p>"The time is always right to do what is right."</p>
         </section>
 
         <div id="img-div">
